welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: not found: value a
    if(a==b) {
       ^withoutDoubles:6: error: not found: value b
    if(a==b) {
          ^withoutDoubles:7: error: not found: value a
      if(a==6) {
         ^withoutDoubles:8: error: not found: value a
        a=1
        ^withoutDoubles:11: error: not found: value a
        a=a+1
        ^withoutDoubles:6: error: type mismatch;
 found   : Unit
 required: Int
    if(a==b) {
    ^