welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if(!noDoubles) {
    return die1+die2
  }
  else {
    if(a==b) {
      if(a==6) {
        a=1
      }
      else {
        a=a+1
      }
    }
  }
}